[tool.poetry]
name = "aula_CRUD"
version = "0.1.0"
description = ""
authors = ["jrena <juliomoreira.rena@gmail.com>"]
license = "q"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
sqlalchemy = "^2.0.31"
pydantic = {extras = ["email"], version = "^2.8.2"}
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
